--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@
 
       <div class="carousel-inner align-middle ">
         <div class="carousel-item active">
-          <a href="index.html"><img src="images/index/solace carousel.mp4" class="d-block w-100 rounded" alt="..."></a>
+          <a href="index.html"><img src="images/INDEX/solace carousel.mp4" class="d-block w-100 rounded" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <a href="sol-ace_sports.html"><img src="images/index/2.png" class="d-block w-100 rounded" alt="..."></a>
+          <a href="sol-ace_sports.html"><img src="images/INDEX/2.png" class="d-block w-100 rounded" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <a href="sol-ace_movies.html"><img src="images/index/3.png" class="d-block w-100 rounded" alt="..."></a>
+          <a href="sol-ace_movies.html"><img src="images/INDEX/3.png" class="d-block w-100 rounded" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
             </div>
         </div>
          <div class="carousel-item">
-          <a href="sol-ace_songs.html"><img src="images/index/4.png" class="d-block w-100 rounded" alt="..."></a>
+          <a href="sol-ace_songs.html"><img src="images/INDEX/4.png" class="d-block w-100 rounded" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -171,7 +171,7 @@
 <div class="row"> 
   <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 15rem;">
-      <img src="images/index/cricket-3.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/cricket-3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">CRICKET</p>
       </div>
@@ -180,7 +180,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 15rem;">
-      <img src="images/index/football-2.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/football-2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">FOOTBALL</p>
       </div>
@@ -189,7 +189,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 15rem;">
-      <img src="images/index/badminton.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/badminton.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">BADMINTON</p>
       </div>
@@ -198,7 +198,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 15rem;">
-      <img src="images/index/hockey-1.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/hockey-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">HOCKEY</p>
       </div>
@@ -218,7 +218,7 @@
 <div class="row"> 
   <div class="col-3">
     <div class="card ttext-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 30rem;">
-      <img src="images/index/lootera.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/lootera.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">LOOTERA</p>
       </div>
@@ -227,7 +227,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded " style="max-width: 18rem; max-height: 30rem;">
-      <img src="images/index/hum aapke hain koun.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/hum aapke hain koun.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-sm-center font-weight-bold">HUM AAPKE HAIN KOUN</p>
       </div>
@@ -236,7 +236,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 30rem;">
-      <img src="images/index/sweety weds nri.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/sweety weds nri.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">SWEETY WEDS NRI </p>
       </div>
@@ -245,7 +245,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 30rem;">
-      <img src="images/index/machine.jpg" class="card-img-top" alt="...">
+      <img src="images/INDEX/machine.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">MACHINE </p>
       </div>
@@ -266,7 +266,7 @@
 <div class="row"> 
   <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
-      <img src="images/index/khushi jab bhi teri portrait.dms" class="card-img-top" alt="...">
+      <img src="images/INDEX/khushi jab bhi teri portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">KHUSHI JAB BHI TERI</p>
       </div>
@@ -275,7 +275,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
-      <img src="images/index/mauja portrait.dms" class="card-img-top" alt="...">
+      <img src="images/INDEX/mauja portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">MAUJA</p>
       </div>
@@ -284,7 +284,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
-      <img src="images/index/lut-gaye portrait.dms" class="card-img-top" alt="...">
+      <img src="images/INDEX/lut-gaye portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">LUT GAYE -MUMBAI SAGA</p>
       </div>
@@ -293,7 +293,7 @@
 
    <div class="col-3">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
-      <img src="images/index/desh mere portrait.dms" class="card-img-top" alt="...">
+      <img src="images/INDEX/desh mere portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-danger text-center font-weight-bold">DESH MERE -BHUJ</p>
       </div>
@@ -367,8 +367,8 @@
         </div>
         <div class="row">
           <div class="col">
-            <a href="#"><img src="images/index/facebook-2.png" style="max-height:30px; max-width:30px"></a>
-            <a href="#"><img src="images/index/linkedin.png" style="max-height:30px; max-width:30px" ></a>
+            <a href="#"><img src="images/INDEX/facebook-2.png" style="max-height:30px; max-width:30px"></a>
+            <a href="#"><img src="images/INDEX/linkedin.png" style="max-height:30px; max-width:30px" ></a>
           </div>
         </div>
       </div>
