--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
          
           &nbsp;
-          <button type="button" class="btn text-light" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"><img src="images/index/login.png" width="45px"/></button>
+          <button type="button" class="btn text-light" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"><img src="images/INDEX/login.png" width="45px"/></button>
 
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
