--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
-          <img src="images/INDEX/square sol-ace.mp4" width="70" height="70" class="d-inline-block align-top rounded" alt="">
+          <img src="images/INDEX//square sol-ace.mp4" width="70" height="70" class="d-inline-block align-top rounded" alt="">
           
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,7 +85,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h4 class="modal-title text-danger" id="exampleModalLabel">
-                    <img src="images/INDEX/square sol-ace.mp4" width="70" height="70" class="d-inline-block align-center rounded" alt="">&nbsp; &nbsp; <em><lg>SOL-ACE...JOIN NOW </lg></em></h4>
+                    <img src="images/INDEX//square sol-ace.mp4" width="70" height="70" class="d-inline-block align-center rounded" alt="">&nbsp; &nbsp; <em><lg>SOL-ACE...JOIN NOW </lg></em></h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -128,7 +128,7 @@
 
       <div class="carousel-inner align-middle ">
         <div class="carousel-item active">
-          <a href="index.html"><img src="images/INDEX/solace carousel.mp4" class="d-block w-100 rounded" alt="..."></a>
+          <a href="index.html"><img src="images/INDEX//solace carousel.mp4" class="d-block w-100 rounded" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
