--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 15rem;">
       <img src="images/INDEX/cricket-3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -178,7 +178,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 15rem;">
       <img src="images/INDEX/football-2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -187,7 +187,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 15rem;">
       <img src="images/INDEX/badminton.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -196,7 +196,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 15rem;">
       <img src="images/INDEX/hockey-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -216,7 +216,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card ttext-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/INDEX/lootera.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -225,7 +225,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded " style="max-width: 18rem; max-height: 30rem;">
       <img src="images/INDEX/hum aapke hain koun.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -234,7 +234,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/INDEX/sweety weds nri.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -243,7 +243,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/INDEX/machine.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -264,7 +264,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/INDEX/khushi jab bhi teri portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -273,7 +273,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/INDEX/mauja portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -282,7 +282,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/INDEX/lut-gaye portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -291,7 +291,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/INDEX/desh mere portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
