--- a/sol-ace_movies.html
+++ b/sol-ace_movies.html
@@ -133,25 +133,25 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/MOVIE//BHOOT-POLICE PORTRAIT.jpg" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/MOVIE//FAST AND FURIOUS PORTRAIT.jpg" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/MOVIE//HELMET PORTRAIT.jpg" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/MOVIE//Kabir-Singh PORTRAIT.jpg" class="card-img-top" alt="...">
     </div>
@@ -168,25 +168,25 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 23rem;">
       <img src="images/MOVIE//street dancer.webp" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 23rem;">
       <img src="images/MOVIE//shersaah.webp" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 23rem;">
       <img src="images/MOVIE//kaabil.webp" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 23rem;">
       <img src="images/MOVIE//bell bottom.webp" class="card-img-top" alt="...">
       
@@ -205,25 +205,25 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/MOVIE//bawala.jpg" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/MOVIE//sakhiya2.0.dms" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/MOVIE//shyam teri bansi.jpg" class="card-img-top" alt="...">
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/MOVIE//ranjha.webp" class="card-img-top" alt="...">
     </div>
