--- a/sol-ace_songs.html
+++ b/sol-ace_songs.html
@@ -133,7 +133,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/SONGS/desh mere portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -142,7 +142,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/baarish ban jana portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -151,7 +151,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/SONGS/zalima coca cola portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -160,7 +160,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/SONGS/lut-gaye portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -179,7 +179,7 @@
   </div>
 </div>
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/bachpan ka pyaar portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -188,7 +188,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/brsaat ki dhum portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -197,7 +197,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/jai hind ki sena portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -206,7 +206,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/paani paani portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -227,7 +227,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/jannat ve portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -236,7 +236,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/khushi jab bhi teri portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -245,7 +245,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/SONGS/mauja portrait.dms" class="card-img-top" alt="...">
       <div class="card-body">
@@ -254,7 +254,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light shadow-lg rounded" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SONGS/RADHE PORTRAIT.dms" class="card-img-top" alt="...">
       <div class="card-body">
