--- a/sol-ace_sports.html
+++ b/sol-ace_sports.html
@@ -134,7 +134,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem;max-height: 15rem;">
       <img src="images/SPORTS/cricket-3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -143,7 +143,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 15rem;">
       <img src="images/SPORTS/cricket2.0.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem;max-height: 15rem;">
       <img src="images/SPORTS/cricket3.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem;max-height: 15rem;">
       <img src="images/SPORTS/cricket4.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -181,7 +181,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card ttext-dark bg-light" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/SPORTS/badminton3.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -190,7 +190,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/SPORTS/badminton2.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -199,7 +199,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/SPORTS/badminton.jpg" class="card-img-top" alt="...">
       <div class="card-body"> 
@@ -208,7 +208,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 30rem;">
       <img src="images/SPORTS/badminton4.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -229,7 +229,7 @@
 </div>
 
 <div class="row"> 
-  <div class="col-3">
+  <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SPORTS/football-2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -238,7 +238,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SPORTS/football2.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -247,7 +247,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem;max-height: 25rem;">
       <img src="images/SPORTS/football3.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -256,7 +256,7 @@
     </div>
   </div>
 
-   <div class="col-3">
+   <div class="col-lg-3 col-6">
     <div class="card text-dark bg-light" style="max-width: 18rem; max-height: 25rem;">
       <img src="images/SPORTS/football4.0.jpg" class="card-img-top" alt="...">
       <div class="card-body">
