--- a/sol-ace_movies.html
+++ b/sol-ace_movies.html
@@ -38,7 +38,7 @@
  
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
-          <img src="images/MOVIE//square sol-ace.mp4" width="70" height="70" class="d-inline-block align-top rounded" alt="">
+          <img src="images/MOVIE//square sol-ace.png" width="70" height="70" class="d-inline-block align-top rounded" alt="">
           
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
