--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         display: block;
 
       }
+       #cards .row .col-lg-3:hover{
+        transform: scale(0.95);
+      }
+
+      #connect:hover {
+        transform: scale(1.5) ;
+        opacity:0.8;
+      }
     </style>
   </head>
   <body>
