--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link text-danger" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-danger" href="sol-ace_tv.html">TV<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-danger" href="sol-ace_movies.html">Movies &#127916;</a>
@@ -76,6 +76,11 @@
 
             <li class="nav-item">
               <a class="nav-link text-danger" href="sol-ace_songs.html" tabindex="-1" aria-disabled="true">Songs &#127926;
+              </a>
+            </li>
+            
+             <li class="nav-item">
+              <a class="nav-link text-danger" href="sol-ace_kids.html" tabindex="-1" aria-disabled="true">KIDS &#127926;
               </a>
             </li>
           </ul>
