--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            
+              <li class="nav-item">
+              <a class="nav-link text-danger" href="sol-ace_movies.html">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link text-danger" href="sol-ace_movies.html">Movies &#127916;</a>
             </li>
