--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
       
       body{
-        background-image: radial-gradient(#FF2626,#000000);
+        background-image: radial-gradient(#000000,#000000);
       } 
 
       iframe{
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-              <a class="nav-link text-danger" href="sol-ace_movies.html">Home</a>
+              <a class="nav-link text-danger" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-danger" href="sol-ace_movies.html">Movies &#127916;</a>
@@ -79,10 +79,10 @@
               </a>
             </li>
             
-             <li class="nav-item">
+<!--              <li class="nav-item">
               <a class="nav-link text-danger" href="sol-ace_kids.html" tabindex="-1" aria-disabled="true">KIDS &#127926;
               </a>
-            </li>
+            </li> -->
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
