--- a/sol-ace_sports.html
+++ b/sol-ace_sports.html
@@ -17,7 +17,7 @@
       
 
       body{
-        background-image: radial-gradient(#FF2626,#000000);
+        background-image: radial-gradient(#000000,#000000);
       } 
 
        iframe{
